--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,6 +44,16 @@ code, pre {
       border-bottom: 1px solid #eee;
     }
 
+    h2 {
+      border-bottom: 3px solid #444;
+      color: #222;
+      background: #fafafa;
+      padding-bottom: 0.4em;
+      margin-top: 3.5rem;
+      margin-bottom: 2.5rem;
+      box-shadow: 0 2px 0 #bbb;
+    }
+
     p {
       margin: 1.5rem 0;
       line-height: 1.6;
@@ -57,6 +67,12 @@ code, pre {
       &:hover {
         text-decoration: underline;
       }
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid #eee;
+      margin: 2rem 0;
     }
   }
 }
