Update feed and index with new blog post details; enhance quick-wits layout and styling for better readability

--- a/_layouts/quick-wits.html
+++ b/_layouts/quick-wits.html
@@ -14,7 +14,7 @@ layout: default
   </header>
 
   <div class="quick-takes-content">
-    <div class="takes-list">
+    <div class="takes-list organized-takes">
       {{ content }}
     </div>
   </div>
