--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,16 @@ title: Blog
     {% for post in site.posts %}
       <li>
         <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+        {% assign words = post.content | number_of_words %}
+        {% assign reading_time = words | divided_by: 225 %}
+        {% if reading_time < 1 %}
+          {% assign reading_time = 1 %}
+        {% endif %}
+        {% if reading_time == 1 %}
+          <span class="post-meta">• 1 min read</span>
+        {% else %}
+          <span class="post-meta">• {{ reading_time }} mins read</span>
+        {% endif %}
         <h2 style="font-weight: normal;">
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
