--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,16 @@ layout: default
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date: "%B %d, %Y" }}
       </time>
-      {% if page.categories %}
-        • Categories: {% for category in page.categories %}
-          <a href="/category/{{ category | slugify }}">{{ category }}</a>{% unless forloop.last %}, {% endunless %}
-        {% endfor %}
+      {% assign words = content | number_of_words %}
+      {% assign reading_time = words | divided_by: 225 %}
+      {% if reading_time < 1 %}
+        {% assign reading_time = 1 %}
+      {% endif %}
+      •
+      {% if reading_time == 1 %}
+        1 min read
+      {% else %}
+        {{ reading_time }} mins read
       {% endif %}
     </div>
 
